--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a 23 year old software engineer in training.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Im from Guanajuato, Mexico</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My hobbies include
+        ; Weight lifting, bike riding, and playing video games. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software engineer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Im based out in Salt Lake City, UT</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>its something ive always wanted to do and had an interest in.</p>
     </section>
 
     <footer id="footer">
